Add speech recognition study mode with similarity scoring
  - Add speech_to_text package for voice input
  - Add SpeechService for managing speech recognition
  - Add TextSimilarity utility with Unicode support
  - Add speech input card with mic button and typing fallback
  - Auto-detect language based on card content (KO/JA/ZH/DE/FR/ES)
  - Show average similarity score on result page
  - Update card item with edit icon button
  - Add sample cards with famous quotes (5 languages)
  - Update platform permissions (iOS/Android microphone)
  - Add localization for speech features (12 languages)
  - Exclude generated localization files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ guides/
 /build/
 /coverage/
 
+# Generated localizations
+lib/l10n/app_localizations*.dart
+
 # Symbolication related
 app.*.symbols
 
