--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone access is required for speech recognition.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Speech recognition is required for memorization practice.</string>
 </dict>
 </plist>
