--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.5.2
   path_provider: ^2.1.5
   provider: ^6.1.5+1
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
