--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.5+1
   speech_to_text: ^7.0.0
+  fl_chart: ^0.66.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
