--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   speech_to_text: ^7.0.0
   fl_chart: ^0.66.0
   shared_preferences: ^2.2.2
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
