feat: Integrate AdMob ads and improve UI contrast
  - Add google_mobile_ads package for monetization
  - Implement banner ad in main navigation
  - Implement interstitial ad after study completion
  - Implement rewarded ad for new card creation
  - Configure AdMob App IDs for iOS and Android
  - Auto-switch between test/production ads based on build mode
  - Fix button and navigation bar colors for better visibility

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -66,5 +66,15 @@
 		<string>Speech recognition is required for memorization practice.</string>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<!-- AdMob App ID -->
+		<key>GADApplicationIdentifier</key>
+		<string>ca-app-pub-8841058711613546~8214648197</string>
+		<key>SKAdNetworkItems</key>
+		<array>
+			<dict>
+				<key>SKAdNetworkIdentifier</key>
+				<string>cstr6suwn9.skadnetwork</string>
+			</dict>
+		</array>
 	</dict>
 </plist>
