--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   webview_flutter: ^4.13.0
   flutter_native_splash: ^2.4.7
   flutter_launcher_icons: ^0.14.4
+  google_mobile_ads: ^5.3.0
 
 dev_dependencies:
   flutter_test:
